[gd_scene load_steps=9 format=3 uid="uid://bxpxh2bravn23"]

[ext_resource type="Script" uid="uid://bhlqqt6s8aoaf" path="res://Escenas/area_de_luz.gd" id="1_8we27"]
[ext_resource type="Texture2D" uid="uid://bk1n5epamsawc" path="res://tiles de prueba/tiles/Arte/Props_Luz/Lampara_Luz.png" id="2_5vsig"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hoifb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8we27"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5vsig"]

[sub_resource type="CircleShape2D" id="CircleShape2D_d0g1a"]

[sub_resource type="Gradient" id="Gradient_5vsig"]
offsets = PackedFloat32Array(0.157895, 0.684211)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_d0g1a"]
gradient = SubResource("Gradient_5vsig")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="AreaDeLuz" type="Node2D" groups=["Luces"]]
script = ExtResource("1_8we27")
"daño_area1" = 25

[node name="AreaDeDaño1" type="Area2D" parent="."]

[node name="CapaDeDaño1" type="CollisionShape2D" parent="AreaDeDaño1"]
shape = SubResource("CircleShape2D_hoifb")

[node name="AreaDeDaño2" type="Area2D" parent="."]

[node name="CapaDeDaño2" type="CollisionShape2D" parent="AreaDeDaño2"]
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_8we27")

[node name="AreaDeDaño3" type="Area2D" parent="."]

[node name="CapaDeDaño3" type="CollisionShape2D" parent="AreaDeDaño3"]
scale = Vector2(3, 3)
shape = SubResource("CircleShape2D_5vsig")

[node name="AreaDeDaño4" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CapaDeDaño4" type="CollisionShape2D" parent="AreaDeDaño4"]
scale = Vector2(4, 4)
shape = SubResource("CircleShape2D_d0g1a")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_5vsig")

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
color = Color(1, 0, 0.2, 1)
energy = 3.0
shadow_enabled = true
texture = SubResource("GradientTexture2D_d0g1a")
texture_scale = 5.0

[node name="PointLight2Amarilla" type="PointLight2D" parent="."]
color = Color(0.996078, 0.792157, 0.533333, 1)
energy = 4.0
shadow_enabled = true
texture = SubResource("GradientTexture2D_d0g1a")
texture_scale = 6.0

[connection signal="body_entered" from="AreaDeDaño1" to="." method="_on_area_de_daño_1_body_entered"]
[connection signal="body_exited" from="AreaDeDaño1" to="." method="_on_area_de_daño_1_body_exited"]
[connection signal="body_entered" from="AreaDeDaño2" to="." method="_on_area_de_daño_2_body_entered"]
[connection signal="body_exited" from="AreaDeDaño2" to="." method="_on_area_de_daño_2_body_exited"]
[connection signal="body_entered" from="AreaDeDaño3" to="." method="_on_area_de_daño_3_body_entered"]
[connection signal="body_exited" from="AreaDeDaño3" to="." method="_on_area_de_daño_3_body_exited"]
[connection signal="body_entered" from="AreaDeDaño4" to="." method="_on_area_de_daño_4_body_entered"]
[connection signal="body_exited" from="AreaDeDaño4" to="." method="_on_area_de_daño_4_body_exited"]
